<resources>
    <string name="app_name">Briscola</string>
    <string name="app_motto">The best available Briscola app!</string>

    <string name="title_activity_test_match">TestMatchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="ok">OK</string>

    <!-- LEFT DRAWER MENU -->
    <string name="app_settings">Settings</string>
    <string name="show_points">Show Points</string>
    <string name="hide_points">Hide Points</string>
    <string name="choose_cards_type">Choose Card Type</string>
    <string name="game_rules">Teach me the rules</string>
    <string name="general_sublist">General</string>
    <string name="play_online">Play Online</string>
    <string name="play_offline">Play Offline</string>
    <string name="game">Game</string>
    <string name="statistics">Statistics</string>
    <string name="ranking">Game Ranking</string>
    <string name="performance_summary">My Performance</string>

    <!--SETTINGS PREFERENCE KEYS -->
    <string name="show_points_preference">show_points_preference</string>
    <string name="choose_difficulty_preference">choose_difficulty_preference</string>
    <string name="choose_card_type_preference">choose_card_type_preference</string>
    <string name="enable_sound_fx_preference">enable_sound_fx_preference</string>
    <string name="enable_music_preference">enable_music_preference</string>-->
    <!--SETTINGS LABELS-->
    <string name="audio_settings">Audio</string>
    <string name="enable_music"> Background Music Enabled</string>
    <string name="enable_sound_fx">Sound Effects Enabled</string>
    <string name="choose_difficutly">Difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_intermediate">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_very_hard">Very Hard</string>

    <!--SETTINGS DEFAULT VALUES -->
    <string name="show_points_default">true</string>
    <string name="choose_difficulty_default">0</string>
    <string name="choose_card_type_default">french</string>
    <string name="enable_sound_fx_defult">true</string>
    <string name="enable_music_default">true</string>

    <!-- MAIN MENU -->
    <string name="start_offline_match">Start Offline Match</string>
    <string name="start_online_match">Start Online Match</string>
    <string name="resume_from_saved">Load Saved Match</string>

    <string name="player1_turn">Other Turn</string>
    <string name="player0_turn">Your Turn</string>

    <string name="save_data_message">Hope you had fun! Please, type in your name, so we can keep track of your performance!</string>
    <string name ="save">Save</string>
    <string name ="type_your_name">Type your name here</string>
    <string name ="mandatory_type_your_name">You MUST type your name here</string>
    <string name="congrats_you_won">CONGRATULATIONS! \n YOU WON!</string>
    <string name="draw">Meeeh! Just a \n DRAW</string>
    <string name="you_lost">YOU LOSE</string>
    <string name="who_won_with">%1$s won with %2$d points!</string>
    <string name="none_won">It is a draw. 60 points each.</string>

    <string name="velocity_normal">Normal</string>
    <string name="velocity_fast">Fast</string>
    <string name="velocity_veryfast">Very Fast</string>
    <string name="change_settings_warning">Changing difficulty will only affect newly started matches!</string>
    <string name="waiting_for_match_to_start">Waiting for match to start</string>
    <string name="sure_leave">Are you sure you want to leave?</string>
    <string name = "yes">Yes</string>
    <string name="no">No</string>
    <string name="abandon">Abandoned the match</string>
    <string name="terminated">Match terminated successfully</string>
    <string name = "other_player">Other player</string>
    <string name = "game_menu">Game Screen</string>
    <string name="warning_should_save">Performing this operation will interrupt the current match. Do you want to save?</string>
    <string name="do_not_save">Don\'t Save</string>
    <string name="load">Load</string>
    <string name="type_config_name">Type Save Slot name</string>
    <string name="mandatory_type_config_name">You MUST type Slot Save Name to Save</string>
    <string name="delete">Delete</string>
    <string name="interrupt_match_no_save">This action will interrupt the current match. Do you want to continue?</string>
    <string name="waiting_for_other_player">Waiting to find another player</string>
    <string name="stop_waiting">Stop Waiting</string>

    <string name = "label_match_won">Number Matches Won: </string>
    <string name = "label_match_lost">Number Matches Lost: </string>
    <string name = "label_match_draw">Number Matches Draw: </string>
    <string name = "label_match_online">Number Matches Online: </string>
    <string name = "label_match_played">Number Matches Played: </string>
    <string name = "data_about_previous_matches">Data About Previous Matches</string>
    <string name="velocity">Velocity</string>
    <string name="saved_data_label">Here you are the saved matches</string>
    <string name="menu_button">Menu</string>
    <string name ="turns_elapsed">Turns: %1$d</string>
    <string name="no_items_saved_matches">No saved matches available. </string>
    <string name="no_items_match_records">No saved match records available. </string>
</resources>
