<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">

            <item android:title="@string/game">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/play_offline"
                            android:icon="@drawable/ic_play_offline"
                            android:title="@string/play_offline" />
                        <item
                            android:id="@+id/play_online"
                            android:icon="@mipmap/ic_playonline"
                            android:title="@string/play_online" />
                    </group>
                </menu>
            </item>

            <item android:title="@string/statistics">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/ranking"
                            android:icon="@drawable/ic_play_offline"
                            android:title="@string/ranking" />
                        <item
                            android:id="@+id/performance_summary"
                            android:icon="@mipmap/ic_playonline"
                            android:title="@string/performance_summary" />
                    </group>
                </menu>
            </item>
            <item android:title="@string/general_sublist">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/settings_item"
                            android:icon="@drawable/ic_settings_black"
                            android:title="@string/app_settings" />
                        <item
                            android:id="@+id/game_rules_item"
                            android:icon="@drawable/ic_info"
                            android:title="@string/game_rules" />
                    </group>
                </menu>
            </item>
        </group>

</menu>