<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
       <!-- <item android:title="@string/game">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/id_game_menu"
                    android:icon="@drawable/ic_play_offline"
                    android:title="@string/game_menu" />
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/id_play_offline"
                        android:icon="@drawable/ic_play_offline_black_48dp"
                        android:title="@string/play_offline" />
                    <item
                        android:id="@+id/id_play_online"
                        android:icon="@drawable/ic_play_online_black_48dp"
                        android:title="@string/play_online" />
                </group>
                </group>
            </menu>
        </item>-->
        <item android:title="@string/statistics">
            <menu>
                <group android:checkableBehavior="single">
                    <!--<item
                        android:id="@+id/id_saved_config"
                        android:icon="@drawable/ic_ranking_black_48dp"
                        android:title="@string/resume_from_saved" />-->
                    <item
                        android:id="@+id/id_performance"
                        android:icon="@drawable/ic_performance_summary_black_48dp"
                        android:title="@string/performance_summary" />

                </group>
            </menu>
        </item>
        <item android:title="@string/general_sublist">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/id_settings"
                        android:icon="@drawable/ic_settings_black"
                        android:title="@string/app_settings" />
                  <!--  <item
                        android:id="@+id/id_game_rules"
                        android:icon="@drawable/ic_info_outline_black_48dp"
                        android:title="@string/game_rules" />-->
                </group>
            </menu>
        </item>

    </group>
</menu>
