<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="101dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/cardView1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toggle_audio"
                android:layout_width="80dp"
                android:layout_height="19dp"
                android:text="@string/enable_music"
                tools:text="ToggleAudio"
                app:layout_constraintBaseline_toBaselineOf="@+id/toggle_audio_switch"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/audio_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <Switch
                android:id="@+id/toggle_audio_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/toggle_sfx_switch" />

            <Switch
                android:id="@+id/toggle_sfx_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/toggle_sfx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_sound_fx"
                tools:text="ToggleSFX"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/toggle_sfx_switch" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:id="@+id/cardView2"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/difficulty_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="48dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/difficulty_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty_easy"
                    tools:layout_editor_absoluteX="140dp"
                    tools:layout_editor_absoluteY="-31dp" />

                <RadioButton
                    android:id="@+id/difficutly_intermediate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty_intermediate"
                    tools:layout_editor_absoluteX="219dp"
                    tools:layout_editor_absoluteY="47dp" />

                <RadioButton
                    android:id="@+id/difficulty_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty_hard" />

                <RadioButton
                    android:id="@+id/difficulty_very_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty_very_hard" />

            </RadioGroup>

            <TextView
                android:id="@+id/difficulty_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose_difficutly"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Difficulty"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:id="@+id/cardView3"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/velocity_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/velocity_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/velocity_normal"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="-31dp" />

            <RadioButton
                android:id="@+id/velocity_fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/velocity_fast"
                tools:layout_editor_absoluteX="219dp"
                tools:layout_editor_absoluteY="47dp" />

            <RadioButton
                android:id="@+id/velocity_very_fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/velocity_veryfast" />

        </RadioGroup>

        <TextView
            android:id="@+id/velocity_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/choose_difficutly"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Difficulty"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>