<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/main_menu_cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:cardCornerRadius="2dp"
        app:cardElevation="9dp"
        app:contentPadding="@dimen/activity_horizontal_margin">
        <android.support.constraint.ConstraintLayout

            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/start_offline_match"
                app:layout_constraintRight_toLeftOf="@+id/guideline8"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline7" />

            <Button
                android:id="@+id/start_offline_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_offline_match"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline7"
                app:layout_constraintRight_toLeftOf="@+id/guideline8"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/start_online_match" />

            <Button
                android:id="@+id/resume_from_saved"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/resume_from_saved"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline7"
                app:layout_constraintRight_toLeftOf="@+id/guideline8"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline9" />

            <Button
                android:id="@+id/start_online_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_online_match"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline7"
                app:layout_constraintRight_toLeftOf="@+id/guideline8"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/resume_from_saved" />

            <android.support.constraint.Guideline
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/guideline7"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline8"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline9"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>