<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shape"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/briscolaSlot"
        android:layout_width="75dp"
        android:layout_height="110dp"
        android:layout_marginTop="216dp"
        app:layout_constraintEnd_toStartOf="@+id/deckSlot"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card_slot_shape" />

    <ImageView
        android:id="@+id/deckSlot2"
        android:layout_width="75dp"
        android:layout_height="110dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/surfaceSlot0"
        app:srcCompat="@drawable/default_card_background"
        tools:layout_editor_absoluteY="216dp" />

    <ImageView
        android:id="@+id/surfaceSlot0"
        android:layout_width="75dp"
        android:layout_height="110dp"
        android:layout_marginEnd="17dp"
        android:adjustViewBounds="false"
        app:layout_constraintEnd_toStartOf="@+id/surfaceSlot1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card_slot_shape" />

    <ImageView
        android:id="@+id/surfaceSlot2"
        android:layout_width="75dp"
        android:layout_height="110dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card_slot_shape" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/player1PileSlot"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:layout_marginStart="7dp"
            app:srcCompat="@drawable/card_slot_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/player1Card0Slot"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:layout_marginEnd="14dp"
            app:srcCompat="@drawable/card_slot_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/player1Card1Slot"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:layout_marginEnd="11dp"
            app:srcCompat="@drawable/card_slot_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/player1Card0Slot" />

        <ImageView
            android:id="@+id/player1Card2Slot"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:layout_marginRight="11dp"
            app:srcCompat="@drawable/card_slot_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/player1Card1Slot" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/player0PileSlot"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:layout_marginStart="7dp"
            app:srcCompat="@drawable/card_slot_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/player0Card0Slot"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:layout_marginEnd="14dp"
            app:srcCompat="@drawable/card_slot_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/player0Card1Slot"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:layout_marginEnd="11dp"
            app:srcCompat="@drawable/card_slot_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/player0Card0Slot" />

        <ImageView
            android:id="@+id/player0Card2Slot"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:layout_marginRight="11dp"
            app:srcCompat="@drawable/card_slot_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/player0Card1Slot" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/player0Turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/card_slot_shape"
        android:padding="8dp"
        android:text="@string/player0_turn"
        tools:alpha="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintStart_toStartOf="@+id/exit_button"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout1" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="@drawable/round_button"
        android:text="@string/exit"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button"
        android:text="@string/menu_button"
        android:layout_marginStart="13dp"
        app:layout_constraintTop_toTopOf="@+id/exit_button"
        app:layout_constraintStart_toEndOf="@+id/exit_button" />

    <TextView
        android:id="@+id/turn_displayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:background="@drawable/card_slot_shape"
        android:padding="8dp"
        android:text="@string/waiting_for_match_to_start"
        app:layout_constraintBaseline_toBaselineOf="@+id/exit_button"
        app:layout_constraintBottom_toBottomOf="@+id/exit_button"
        app:layout_constraintStart_toEndOf="@+id/menu_button" />


</android.support.constraint.ConstraintLayout>
